--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <link rel="manifest" href="/manifest.json" />
     <!-- ios support -->
+    <script async src="https://unpkg.com/pwacompat" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png" />
     <meta name="apple-mobile-web-app-status-bar" content="#FFE1C4" />
+
   </head>
   <body class="grey lighten-4">
     <!-- top nav -->
