--- a/pages/about.html
+++ b/pages/about.html
@@ -60,7 +60,7 @@
         amet iure, non dignissimos illo.
       </p>
     </div>
-
+    <script src="/js/app.js"></script>
     <script src="/js/ui.js"></script>
   </body>
 </html>
