--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script async src="https://unpkg.com/pwacompat" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png" />
     <meta name="apple-mobile-web-app-status-bar" content="#FFE1C4" />
-
+    <meta name="theme-color" content="#FFE1C4">
   </head>
   <body class="grey lighten-4">
     <!-- top nav -->
