--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="card-panel recipe white row">
         <img src="/img/dish.png" alt="recipe thumb" />
         <div class="recipe-details">
-          <div class="recipe-title">Edame Noodles..</div>
+          <div class="recipe-title">Edame Noodles</div>
           <div class="recipe-ingredients">Edame Beans, Noodels, Garlic oil</div>
         </div>
         <div class="recipe-delete">
