--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 
     <!-- recipes -->
     <div class="recipes container grey-text text-darken-1">
-      <h6 class="center">Ninja Recipes</h6>
+      <h6 class="center status"></h6>
     </div>
   
   </div>
